--- a/ProposalGroup046-Wi23.ipynb
+++ b/ProposalGroup046-Wi23.ipynb
@@ -44,8 +44,8 @@
     "# Names\n",
     "\n",
     "- Peter Barnett\n",
-    "- Ricardo Sedano\n",
-    "- William Lutz"
+    "- William Lutz\n",
+    "- Ricardo Sedano\n"
    ]
   },
   {
