--- a/ProposalGroup046-Wi23.ipynb
+++ b/ProposalGroup046-Wi23.ipynb
@@ -46,7 +46,6 @@
     "- Peter Barnett\n",
     "- William Lutz\n",
     "- Ricardo Sedano"
-
    ]
   },
   {
@@ -153,14 +152,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Put things here that cement how you will interact/communicate as a team, how you will handle conflict and difficulty, how you will handle making decisions and setting goals/schedule, how much work you expect from each other, how you will handle deadlines, etc...\n",
-    "* *Team Expectation 1*\n",
-    "* *Team Expectation 2*\n",
-    "* *Team Expecation 3*\n",
-    "* ..."
+    "Each project team member has agreed to and and is expected to: \n",
+    "* Attend all-team meetings\n",
+    "* Remain attentive; communicate quickly and effectively\n",
+    "* Do work assigned to them\n",
+    "* Be respectful of each others' work\n",
+    "* Stay aware of deadlines and collaborate in favor of completing a comprehensive project"
    ]
   },
   {
