--- a/ProposalGroup046-Wi23.ipynb
+++ b/ProposalGroup046-Wi23.ipynb
@@ -52,15 +52,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Abstract \n",
-    "This section should be short and clearly stated. It should be a single paragraph <200 words.  It should summarize: \n",
-    "- what your goal/problem is\n",
-    "- what the data used represents and how they are measured\n",
-    "- what you will be doing with the data\n",
-    "- how performance/success will be measured"
+    "Our goal is to predict the minimum number of character substitutions required to turn a given input string of alphabetical characters into an English dictionary word (into *any* English dictionary word). That is, to predict the hamming distance between a given input string and its nearest English word. This problem can be solved with brute force nearest-neighbor search, or with a BK-tree, but takes a considerable amount of time if one needs to make this prediction many times. So the purpose of this project is to be able to generate approximations of this shortest distance more quickly. The words will come from the open source WordSet dictionary, the training inputs will be generated from random strings, and the training labels will be generated using the brute force search approach. The same process is used to create the test data. We will train our model on this data and its performance will be measured by computing the average error |predicted distance - true distance| across the test dataset."
    ]
   },
   {
