--- a/ProposalGroup046-Wi23.ipynb
+++ b/ProposalGroup046-Wi23.ipynb
@@ -62,9 +62,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Background\n",
+    "# Background,\n",
     "\n",
-    "Hamming distance is the measured difference between two strings of equal lengths. As a simple example, the two strings 'car' and 'cat' would have a Hamming distance of 1, meaning that they only differ by one character. This mathematical concept was first published in 1950 his paper 'Error detecting error correcting codes' <a name = \"hamming\">[<sup>[1]</sup>](#hammingnote). \n",
+    "Hamming distance is the measured difference between two strings of equal lengths. As a simple example, the two strings 'car' and 'cat' would have a Hamming distance of 1, meaning that they only differ by one character. This mathematical concept was first published in 1950 his paper 'Error detecting error correcting codes' <a name = \"hamming\"></a>[<sup>[1]</sup>](#hammingnote). \n",
     "</br>\n",
     "</br>\n",
     "While it has widely been used in error detection, DNA sequencing, image processing, and NLP, trying to find the minimum Hamming distance between an input and a large dataset is computationally expensive to calculate when iterating through many examples."
