--- a/ProposalGroup046-Wi23.ipynb
+++ b/ProposalGroup046-Wi23.ipynb
@@ -134,11 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If your project has obvious potential concerns with ethics or data privacy discuss that here.  Almost every ML project put into production can have ethical implications if you use your imagination. Use your imagination. Get creative!\n",
-    "\n",
-    "Even if you can't come up with an obvious ethical concern that should be addressed, you should know that a large number of ML projects that go into producation have unintended consequences and ethical problems once in production. How will your team address these issues?\n",
-    "\n",
-    "Consider a tool to help you address the potential issues such as https://deon.drivendata.org"
+    "There are little to no obvious ethics & privacy concerns that arise from our project. The process highlighted in the project computes a numerical value (hamming distance), which is not involving other data, especially excluding personal data. Seeing as this process takes a string and compares to an established word, we could see a potential algorithm that creates text dialogue from these words. This connects to artificial intellegence; AI may be able to generate converstations with users online, which could involve ethics issues in spontaneous text production or privacy issues if AI creates upon platforms asking for personal information.\n"
    ]
   },
   {
