--- a/ProposalGroup046-Wi23.ipynb
+++ b/ProposalGroup046-Wi23.ipynb
@@ -86,16 +86,7 @@
    "source": [
     "# Data\n",
     "\n",
-    "You should have a strong idea of what dataset(s) will be used to accomplish this project. \n",
-    "\n",
-    "If you know what (some) of the data you will use, please give the following information for each dataset:\n",
-    "- link/reference to obtain it\n",
-    "- description of the size of the dataset (# of variables, # of observations)\n",
-    "- what an observation consists of\n",
-    "- what some critical variables are, how they are represented\n",
-    "- any special handling, transformations, cleaning, etc will be needed\n",
-    "\n",
-    "If you don't yet know what your dataset(s) will be, you should describe what you desire in terms of the above bullets."
+    "Our data for this is very simple. We source the English words from the open source WordSet dictionary, and we generate the training data ourselves by creating random strings with alphabet characters and using brute-force search to assign each string its corresponding minimum hamming distance label, relative to the WordSet dictionary. We may choose to generate our random strings according to a letter frequency distribution or a bigram or trigram, or otherwise by randomly mutating random dictionary word strings to produce realistic use-case examples."
    ]
   },
   {
