--- a/CheckpointGroup046-Wi23.ipynb
+++ b/CheckpointGroup046-Wi23.ipynb
@@ -97,10 +97,79 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Preliminary results\n",
+    "\n",
+    "!pip install spotipy\n",
+    "\n",
+    "import numpy as np\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import spotipy\n",
+    "from spotipy.oauth2 import SpotifyClientCredentials\n",
+    "\n",
+    "def get_features_from_playlist(playlist_name):\n",
+    "\n",
+    "    #create authentication/my credentials using Spotipy\n",
+    "    cid = 'f20bed5bd1e6439ab409ed55211f1f9d'\n",
+    "    secret = '27fb5f47ab8043978e797ddc884e99c3'\n",
+    "    client_credentials_manager = SpotifyClientCredentials(client_id=cid, client_secret=secret)\n",
+    "    sp = spotipy.Spotify(client_credentials_manager=client_credentials_manager)\n",
+    "\n",
+    "    #search for the playlist by name/can change to be by specific spotify ID\n",
+    "    results = sp.search(q=playlist_name, type='playlist')\n",
+    "\n",
+    "    #pull top playist ID from the search results\n",
+    "    playlist_id = results['playlists']['items'][0]['id']\n",
+    "\n",
+    "    #get the tracks from that playlist\n",
+    "    playlist_tracks = sp.playlist_tracks(playlist_id)\n",
+    "\n",
+    "    #extract the track IDs from that playlist\n",
+    "    track_ids = [track['track']['id'] for track in playlist_tracks['items']]\n",
+    "\n",
+    "    # retrieve the audio features for each track in the playlist\n",
+    "    audio_features = []\n",
+    "    for i in range(0, len(track_ids), 50):\n",
+    "        features = sp.audio_features(track_ids[i:i+50])\n",
+    "        audio_features.append(features)\n",
+    "\n",
+    "    #filter out irrelevenat info from data (type, id, uri, track_href, analysis_url)\n",
+    "    filtered_audio_features = []\n",
+    "    for feature_set in audio_features:\n",
+    "        for feature in feature_set:\n",
+    "            filtered_feature = {key: value for key, value in feature.items() if key not in ['type', 'id', 'uri', 'track_href', 'analysis_url']}\n",
+    "            filtered_audio_features.append(filtered_feature)\n",
+    "\n",
+    "    data = []\n",
+    "    for feature in filtered_audio_features:\n",
+    "        data.append(list(feature.values()))\n",
+    "\n",
+    "    return data\n",
+    "\n",
+    "#pull in data from 'Top Songs - Global' playlist\n",
+    "data = get_features_from_playlist('Top Songs - Global')\n",
+    "\n",
+    "#kmeans of 5, we can tune later\n",
+    "kmeans = KMeans(n_clusters=5, random_state=0).fit(data)\n",
+    "\n",
+    "#get the cluster for each song\n",
+    "clusters = kmeans.predict(data)\n",
+    "\n",
+    "#randomly creating training and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(data, clusters, test_size=0.3, random_state=42)\n",
+    "\n",
+    "#heres the different data sets\n",
+    "#x is all the feature data and y is the corresponding grouping/cluster\n",
+    "print(\"Training data:\")\n",
+    "print(X_train)\n",
+    "print(y_train)\n",
+    "print(\"Test data:\")\n",
+    "print(X_test)\n",
+    "print(y_test)\n",
     "\n",
     "NEW SECTION!\n",
     "\n",
