--- a/CheckpointGroup046-Wi23.ipynb
+++ b/CheckpointGroup046-Wi23.ipynb
@@ -8,6 +8,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -15,11 +16,9 @@
     "\n",
     "Hopefully your team is at least this good. Obviously you should replace these with your names.\n",
     "\n",
-    "- Pelé\n",
-    "- Diego Maradonna\n",
-    "- Johan Cruyff\n",
-    "- Roberto Carlos\n",
-    "- Franz Beckenbaur"
+    "- Peter Barnett\n",
+    "- William Lutz\n",
+    "- Ricardo Sedano"
    ]
   },
   {
