--- a/ProposalGroup046-Wi23.ipynb
+++ b/ProposalGroup046-Wi23.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# COGS 118A- Project Proposal"
+    "# Predicting Hamming Distance to Dictionary"
    ]
   },
   {
@@ -63,7 +64,6 @@
    "metadata": {},
    "source": [
     "# Background\n",
-    "\n",
     "Hamming distance is the measured difference between two strings of equal lengths. As a simple example, the two strings 'car' and 'cat' would have a Hamming distance of 1, meaning that they only differ by one character. This mathematical concept was first published in 1950 his paper 'Error detecting error correcting codes' <a name = \"hamming\"></a>[<sup>[1]</sup>](#hammingnote). \n",
     "</br>\n",
     "</br>\n",
@@ -71,10 +71,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Problem Statement\n",
+    "\n",
     "\n",
     "Clearly describe the problem that you are solving. Avoid ambiguous words. The problem described should be well defined and should have at least one ML-relevant potential solution. Additionally, describe the problem thoroughly such that it is clear that the problem is quantifiable (the problem can be expressed in mathematical or logical terms), measurable (the problem can be measured by some metric and clearly observed), and replicable (the problem can be reproduced and occurs more than once)."
    ]
