--- a/CheckpointGroup046-Wi23.ipynb
+++ b/CheckpointGroup046-Wi23.ipynb
@@ -12,6 +12,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Predicting Minimum Hamming Distance Between Word and Vocabulary List"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Names\n",
     "\n",
     "- Peter Barnett\n",
@@ -20,15 +28,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Abstract \n",
-    "This section should be short and clearly stated. It should be a single paragraph <200 words.  It should summarize: \n",
-    "- what your goal/problem is\n",
-    "- what the data used represents and how they are measured\n",
-    "- what you will be doing with the data\n",
-    "- how performance/success will be measured"
+    "Our goal is to predict the minimum number of character substitutions required to turn a given input string of alphabetical characters into an English dictionary word (into *any* English dictionary word). That is, to predict the hamming distance between a given input string and its nearest English word. This problem can be solved with brute force nearest-neighbor search, or with a BK-tree, but takes a considerable amount of time if one needs to make this prediction many times. So, the purpose of this project is to be able to generate approximations of this shortest distance more quickly. The words will come from the open source WordSet dictionary, the training inputs will be generated from random strings, and the training labels will be generated using the brute force search approach. The same process is used to create the test data. We will train our model on this data and its performance will be measured by computing the average error |predicted distance - true distance| across the test dataset."
    ]
   },
   {
@@ -38,9 +43,11 @@
    "source": [
     "# Background\n",
     "\n",
-    "Fill in the background and discuss the kind of prior work that has gone on in this research area here. **Use inline citation** to specify which references support which statements.  You can do that through HTML footnotes (demonstrated here). I used to reccommend Markdown footnotes (google is your friend) because they are simpler but recently I have had some problems with them working for me whereas HTML ones always work so far. So use the method that works for you, but do use inline citations.\n",
+    "Hamming distance is the measured difference between two strings of equal lengths. As a simple example, the two strings 'car' and 'cat' would have a Hamming distance of 1, meaning that they only differ by one character. This mathematical concept was first published in 1950 his paper 'Error detecting error correcting codes' <a name = \"hamming\"></a>[<sup>[1]</sup>](#hammingnote). </br> </br>\n",
     "\n",
-    "For everyday msuic listeners, music consumption may not be influenced by ouside factors, like your network's music activity, but instead be autonomous based on the user's taste in music. This autonomy is seen and valued by some, such as school students who amplify thier expereinces based of music and personal autonomy <a name=\"green\"></a>[<sup>[1]</sup>](#greennote). \n",
+    "We see and acnowlegde how Hamming distance has multiple applications to solve difficult applications in science, for example, comparing genomic sequences <a name = \"pinheiro\"></a>[<sup>[2]</sup>](#pinheironote). Yet, while it has widely been used in DNA sequencing, error detection, and image processing, trying to find the minimum Hamming distance between an input and a large dataset is computationally expensive to calculate when iterating through many examples. \n",
+    "\n",
+    "For this project, our team aims to calculate the minimum Hamming distance from an input sting of text to dictionary entries of the same length. In this application, user creators can implement effecient algothitms for spell check, autocorrection<a name = \"lalwari\"></a>[<sup>[3]</sup>](#lalwarinote), text predition, and even word puzzle contruction.\n",
     "\n",
     " "
    ]
@@ -270,9 +277,12 @@
    "metadata": {},
    "source": [
     "# Footnotes\n",
-    "<a name=\"greennote\"></a>1.[^](#green): Green, L. (2006) Popular music education in and for itself, and for ‘other’ music: current research in the classroom *The Institute of Education, University of London, UK*. https://journals.sagepub.com/doi/pdf/10.1177/0255761406065471?casa_token=-foOp6WBUzEAAAAA:0PWTgGnA4MxWmD3SJ2gvEpp42Cg5Tm4WQJ9gZGwnGdW2Vr_RPo7VbZS-3HAQKJvTz50Mivo3RMaC<br> \n",
-    "<a name=\"admonishnote\"></a>2.[^](#admonish): Also refs should be important to the background, not some randomly chosen vaguely related stuff. Include a web link if possible in refs as above.<br>\n",
-    "<a name=\"sotanote\"></a>3.[^](#sota): Perhaps the current state of the art solution such as you see on [Papers with code](https://paperswithcode.com/sota). Or maybe not SOTA, but rather a standard textbook/Kaggle solution to this kind of problem\n"
+    "<a name=\"hammingnote\"></a>1.[^](#hamming): Hamming, R. W. (1950) Error detecting and error correcting codes. *Bell Systems Technical Journal, 29(2)*. https://ieeexplore.ieee.org/document/6772729<br> \n",
+    " \n",
+    "\n",
+    "<a name=\"pinheironote\"></a>2.[^](#pinheiro): Pinheiro, H.P.  Analysis of Variance for Hamming Distances Applied to Unbalanced Designs. (https://ime.unicamp.br/sites/default/files/pesquisa/relatorios/rp-2001-30.pdf).<br>\n",
+    "\n",
+    "<a name=\"lalwaninote\"></a>3.[^](#lalwani): Lalwani, M. (2014) Efficient Algorithm for Auto Correction Using n-gram Indexing *Nirma University, Ahmedabad, India* (https://www.researchgate.net/profile/Mahesh-Lalwani/publication/266886742_Efficient_Algorithm_for_Auto_Correction_Using_n-gram_Indexing/links/547ee25e0cf2d2200edeaf9f/Efficient-Algorithm-for-Auto-Correction-Using-n-gram-Indexing.pdf).<br>\n"
    ]
   },
   {
